--- a/00-02-hello-plot.ipynb
+++ b/00-02-hello-plot.ipynb
@@ -27,9 +27,35 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.33344831  0.92456144  0.94917272  0.09816052  0.38887588  0.05304356\n",
+      "   0.67944831  0.34795174  0.72655752  0.41594353]\n",
+      " [ 0.16414754  0.13959313  0.55763982  0.60127073  0.84350628  0.43434862\n",
+      "   0.73156235  0.00711986  0.41265711  0.2649614 ]\n",
+      " [ 0.88070497  0.79927813  0.45633614  0.4722417   0.1195001   0.66253411\n",
+      "   0.56249547  0.5413549   0.07014011  0.30753316]\n",
+      " [ 0.02276425  0.95632887  0.33065831  0.52167429  0.75327535  0.27676784\n",
+      "   0.80604403  0.3013932   0.36461554  0.79984243]\n",
+      " [ 0.13275844  0.63444508  0.79967192  0.77429155  0.41723715  0.83621855\n",
+      "   0.95847406  0.18071067  0.70499025  0.92594416]\n",
+      " [ 0.52192461  0.2382945   0.66982505  0.57612277  0.27889268  0.10417466\n",
+      "   0.66916128  0.92834805  0.08049419  0.24561346]\n",
+      " [ 0.93446052  0.16381946  0.36329766  0.92020633  0.23048162  0.24101946\n",
+      "   0.33585339  0.50935575  0.97154522  0.7529639 ]\n",
+      " [ 0.81117336  0.95964542  0.27026077  0.15315361  0.26251908  0.90175903\n",
+      "   0.0168717   0.64642271  0.73456027  0.99982416]\n",
+      " [ 0.87787341  0.09818148  0.83628608  0.91409365  0.23346027  0.53420696\n",
+      "   0.70189131  0.53546204  0.3647781   0.11118703]\n",
+      " [ 0.89485078  0.40693677  0.99678191  0.97578935  0.75447777  0.03422987\n",
+      "   0.6428408   0.84734177  0.33466331  0.71520314]]\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f6b8dc1d7b8>"
+       "<matplotlib.image.AxesImage at 0x7fac299fe4e0>"
       ]
      },
      "execution_count": 1,
@@ -38,9 +64,9 @@
     },
     {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAPgAAAD8CAYAAABaQGkdAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAADJFJREFUeJzt3W2MnXWZx/HfrzMDZWaaFlIKS9u1XSBoY3RhJyylWbJS\nVBC1EompWUw0m3Q1Km3thkWSjdlE98XGZdEEkVqR3djYF6UmrEGEBAU1pDIUsvTBare6bXmcRfs0\nbZ0+XPtiZpNK7Jy7zP/vPXPl+0lIOqc311xpz7f3OWfuOeOIEICcprW9AIB6CBxIjMCBxAgcSIzA\ngcQIHEiMwIHECBxIjMCBxLprDO3q74vuCy4oPrdn+vHiMyUpXu8pPvNEf50rBLsPu8rcU1XuCZIr\nXSh5yUWvF5859IsZxWdK0sj8ruIzj7+2XycOHul4Z6jy19p9wQW6ZM2q4nMvfttrxWdK0qn/mFN8\n5it/dar4TEm66Kd1HnQdnV1n7rSRKmP1T6sfLD7z/huWFp8pSXv+tfw/HLvXfKPRcTxEBxIjcCAx\nAgcSI3AgMQIHEiNwILFGgdu+0fZO27ts31l7KQBldAzcdpekeyXdJGmRpI/aXlR7MQAT1+QMfrWk\nXRGxOyJGJG2QtKzuWgBKaBL4XEl7T/t439htv8f2CtuDtgdPHh4utR+ACSj2IltErI2IgYgY6Orv\nKzUWwAQ0CfxFSfNP+3je2G0AJrkmgT8j6XLbC22fI2m5pIfrrgWghI7fTRYRJ2x/RtIPJHVJeiAi\ntlXfDMCENfp20Yh4RNIjlXcBUBhXsgGJETiQGIEDiRE4kBiBA4lVedPFy2a9qg23/FvxuXe8a3nx\nmZIUh/+7+Mzj511WfKYkXbP6mSpzB//5L6rMnTn4UpW5//CuDxefufDYq8VnStI091eZ2+hzt/aZ\nAVRH4EBiBA4kRuBAYgQOJEbgQGIEDiRG4EBiBA4kRuBAYgQOJEbgQGIEDiRG4EBiBA4kRuBAYgQO\nJEbgQGIEDiRG4EBiBA4k5ogoPnRm9+xY3L+s+Nyvb63z49F+fPQtxWeuv/m64jMlada/768y99jJ\nKm+wq6O3X1hl7u/m9Baf+cSD64rPlKTFaz5ZfObWR+/R8Ot73ek4zuBAYgQOJEbgQGIEDiRG4EBi\nBA4k1jFw2/Nt/9D2dtvbbK/8YywGYOKafPHzhKQ1EbHF9gxJz9p+PCK2V94NwAR1PINHxMsRsWXs\n14ck7ZA0t/ZiACburJ6D214g6UpJm2ssA6Csxtcn2u6X9JCkVRFx8A/8/gpJKyRpuvuKLQjgzWt0\nBrfdo9G410fEpj90TESsjYiBiBg4Z9r0kjsCeJOavIpuSd+UtCMi7q6/EoBSmpzBl0j6mKTrbT8/\n9t/7Ku8FoICOz8Ej4ieSOn5bGoDJhyvZgMQIHEiMwIHECBxIjMCBxKq8096xPz1XO794afG5M6d1\nFZ8pSbf2v1J8Zt/3Hy8+U5KePnxZlbnf3fmOKnMvXlDnoqeV/7Kh+MyBf/xU8ZmSdPeX7is+8+9e\nGGp0HGdwIDECBxIjcCAxAgcSI3AgMQIHEiNwIDECBxIjcCAxAgcSI3AgMQIHEiNwIDECBxIjcCAx\nAgcSI3AgMQIHEiNwIDECBxIjcCCxKu+qeu6QdOl9UXzuR25bXHymJL16+7XFZ1789KHiMyXpwOV1\nfvb6B9b8rMrcv//qU1XmPn5kQfGZv7nqVPGZkrRm+0eKz9x39IFGx3EGBxIjcCAxAgcSI3AgMQIH\nEiNwIDECBxJrHLjtLtvP2f5ezYUAlHM2Z/CVknbUWgRAeY0Ctz1P0s2S1tVdB0BJTc/g90i6Q9IZ\nr+WzvcL2oO3B48eHiywHYGI6Bm77/ZJei4hnxzsuItZGxEBEDPT01LleGsDZaXIGXyLpg7Z/LWmD\npOttf7vqVgCK6Bh4RHw+IuZFxAJJyyU9ERG3Vd8MwITxdXAgsbP6fvCI+JGkH1XZBEBxnMGBxAgc\nSIzAgcQIHEiMwIHEqryranRZI7N6is/dc+9fFp8pSVfc+ULxmTvvvbz4TEm6Y+A/q8z925l7qsz9\n0NXl31FUkkb+7KLiM89bdbj4TEk68tPZxWeeOtwsXc7gQGIEDiRG4EBiBA4kRuBAYgQOJEbgQGIE\nDiRG4EBiBA4kRuBAYgQOJEbgQGIEDiRG4EBiBA4kRuBAYgQOJEbgQGIEDiRG4EBiVd5V9dSFJzX8\nqQPF58bQjOIzJenkOy4tPnPO7IPFZ0rSu/t2Vpm7+qWlVebGkaNV5h6fUf6ue2zvucVnStJfL/uv\n4jOHNjX7c+UMDiRG4EBiBA4kRuBAYgQOJEbgQGKNArc9y/ZG2z+3vcP24tqLAZi4pl9M/IqkRyPi\nVtvnSOqtuBOAQjoGbnumpOskfVySImJE0kjdtQCU0OQh+kJJQ5K+Zfs52+ts91XeC0ABTQLvlnSV\npPsi4kpJw5LufONBtlfYHrQ9eOLAkcJrAngzmgS+T9K+iNg89vFGjQb/eyJibUQMRMRA90yeogOT\nQcfAI+IVSXttXzF201JJ26tuBaCIpq+if1bS+rFX0HdL+kS9lQCU0ijwiHhe0kDlXQAUxpVsQGIE\nDiRG4EBiBA4kRuBAYgQOJFblXVXnTt+vL731u8Xnfm3G9cVnStKS+3cVn/nYp68rPlOSblj+uSpz\n5zzdVWXuU1u/WmXuLe+ZU3zmXe99svhMSfriTz5QfOaho483Oo4zOJAYgQOJETiQGIEDiRE4kBiB\nA4kROJAYgQOJETiQGIEDiRE4kBiBA4kROJAYgQOJETiQGIEDiRE4kBiBA4kROJAYgQOJVXnTxd+e\n7NVDvyn/o8z6e35XfKYkva9/a/GZ69/53uIzJalr+FSVucMfOlhl7i1X3Vxl7slXdxaf+eBdy4rP\nlKS3PfXL4jP372/WAmdwIDECBxIjcCAxAgcSI3AgMQIHEiNwILFGgdtebXub7a22v2N7eu3FAExc\nx8Btz5V0u6SBiHi7pC5Jy2svBmDimj5E75Z0nu1uSb2SXqq3EoBSOgYeES9K+rKkPZJelnQgIh57\n43G2V9getD147Ld1LikFcHaaPEQ/X9IySQslXSKpz/ZtbzwuItZGxEBEDEw//9zymwI4a00eot8g\n6VcRMRQRxyVtknRt3bUAlNAk8D2SrrHda9uSlkraUXctACU0eQ6+WdJGSVskvTD2/6ytvBeAAhp9\nP3hEfEHSFyrvAqAwrmQDEiNwIDECBxIjcCAxAgcSq/KuqocO9OrJR/+8+Nyv/839xWdK0ic/t6r4\nzGkff734TEm6YsX+KnN/cfefVJnbu7HOu8DufLjCtVYuP1KS+n85p/zQ4Z5Gh3EGBxIjcCAxAgcS\nI3AgMQIHEiNwIDECBxIjcCAxAgcSI3AgMQIHEiNwIDECBxIjcCAxAgcSI3AgMQIHEiNwIDECBxIj\ncCAxAgcSc0SUH2oPSfqfBofOlvS/xReoZyrtO5V2labWvpNh17dExIWdDqoSeFO2ByNioLUFztJU\n2ncq7SpNrX2n0q48RAcSI3AgsbYDX9vy5z9bU2nfqbSrNLX2nTK7tvocHEBdbZ/BAVTUWuC2b7S9\n0/Yu23e2tUcntufb/qHt7ba32V7Z9k5N2O6y/Zzt77W9y3hsz7K90fbPbe+wvbjtncZje/XY/WCr\n7e/Ynt72TuNpJXDbXZLulXSTpEWSPmp7URu7NHBC0pqIWCTpGkmfnsS7nm6lpB1tL9HAVyQ9GhFv\nlfROTeKdbc+VdLukgYh4u6QuScvb3Wp8bZ3Br5a0KyJ2R8SIpA2SlrW0y7gi4uWI2DL260MavQPO\nbXer8dmeJ+lmSeva3mU8tmdKuk7SNyUpIkYios7PRy6nW9J5trsl9Up6qeV9xtVW4HMl7T3t432a\n5NFIku0Fkq6UtLndTTq6R9Idkur8cO5yFkoakvStsacT62z3tb3UmUTEi5K+LGmPpJclHYiIx9rd\nany8yNaQ7X5JD0laFREH297nTGy/X9JrEfFs27s00C3pKkn3RcSVkoYlTebXY87X6CPNhZIukdRn\n+7Z2txpfW4G/KGn+aR/PG7ttUrLdo9G410fEprb36WCJpA/a/rVGn/pcb/vb7a50Rvsk7YuI/39E\ntFGjwU9WN0j6VUQMRcRxSZskXdvyTuNqK/BnJF1ue6HtczT6QsXDLe0yLtvW6HPEHRFxd9v7dBIR\nn4+IeRGxQKN/rk9ExKQ8y0TEK5L22r5i7Kalkra3uFIneyRdY7t37H6xVJP4RUFp9CHSH11EnLD9\nGUk/0OgrkQ9ExLY2dmlgiaSPSXrB9vNjt90VEY+0uFMmn5W0fuwf+t2SPtHyPmcUEZttb5S0RaNf\nXXlOk/yqNq5kAxLjRTYgMQIHEiNwIDECBxIjcCAxAgcSI3AgMQIHEvs/IsG+XVGBUGkAAAAASUVO\nRK5CYII=\n",
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAPgAAAD8CAYAAABaQGkdAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAADIxJREFUeJzt3X2MXXWdx/HPp3da6AyFtoJLbJt2XPGhgoY6IdTGLgLZ\nxUWLmk0sBswSszUqUlyMAU0kmviHWdenrHHTVMyuVMhurQYJQV2pxqc0DKUJtiO7tZbSB6RoLc0A\nnT58/WPGpKKde4b5/Tgz332/EpLO5fDtN8O8e+69c+bUESEAOc1oewEA9RA4kBiBA4kROJAYgQOJ\nETiQGIEDiRE4kBiBA4n11Bja6e2LmXPnF587Z+4zxWdK0nk9R4rPfOr4nOIzJenIod4qc2eePVJl\n7ktnlf/cStLx6BSfeeaMOp+D/Y/0FZ/5nIY1Ekfd7bgqgc+cO1+L1/xz8blvftvW4jMlac25Pyo+\nc/1TK4vPlKTN33pDlbmLrnysytwPLNpcZe7B42cXn/naM/YVnylJt7+8/P+zLfGDRsfxFB1IjMCB\nxAgcSIzAgcQIHEiMwIHEGgVu+yrbj9reafvW2ksBKKNr4LY7kr4s6S2Slkq61vbS2osBmLwmZ/BL\nJO2MiF0RMSLpbknX1F0LQAlNAl8g6fFTPt479tifsL3G9qDtwRPPDJfaD8AkFHuTLSLWRcRARAx0\nestfewtg4poEvk/SolM+Xjj2GIAprkngD0q6wHa/7VmSVku6p+5aAEro+tNkEXHc9o2SviupI+mO\niNhefTMAk9box0Uj4j5J91XeBUBhXMkGJEbgQGIEDiRG4EBiBA4kVuWmi3PnDWvVO35WfG5vpbte\n9s88WXzmrnf/2dW8RSx+emeVuf+65ttV5p5f/uankqTVi19TfObuu/62+ExJuujH+4vP7Ly3Wbqc\nwYHECBxIjMCBxAgcSIzAgcQIHEiMwIHECBxIjMCBxAgcSIzAgcQIHEiMwIHECBxIjMCBxAgcSIzA\ngcQIHEiMwIHECBxIjMCBxKrcVXWGTla5A+p3/u1vis+UpG/Nvqz4zJV3PVh8piQ99JllVea+4z9v\nqTJ36WV17gL7xE0XFJ/58df/V/GZkvSm2buLz3z7rEONjuMMDiRG4EBiBA4kRuBAYgQOJEbgQGJd\nA7e9yPZm2ztsb7e99sVYDMDkNfk++HFJt0TEVttzJD1k+/sRsaPybgAmqesZPCIORMTWsV8fkTQk\nqc7fjQugqAm9Bre9RNLFkrbUWAZAWY0Dt32WpG9Kujkinv4L/36N7UHbg88cKn+ZKoCJaxS47Zka\njXtDRGz6S8dExLqIGIiIgd55s0ruCOAFavIuuiV9VdJQRHyu/koASmlyBl8h6XpJl9veNvbP31fe\nC0ABXb9NFhE/keQXYRcAhXElG5AYgQOJETiQGIEDiRE4kFiVmy6eNeOolvf9X/G5/z3/suIzJWn4\n5ceKz3zX/DpX896/bKDK3IU/qHP14fC951eZe/QjR4rPvP0nby8+U5KWLD5YfObuo3c2Oo4zOJAY\ngQOJETiQGIEDiRE4kBiBA4kROJAYgQOJETiQGIEDiRE4kBiBA4kROJAYgQOJETiQGIEDiRE4kBiB\nA4kROJAYgQOJETiQWJW7qj42PF/v//l1xefOeab4SEnSGfOeKz5z67P9xWdK0qfeeXeVuV/a9q4q\nc2c/+psqc3s3Lyo/s/jEUXvOmF985sixTqPjOIMDiRE4kBiBA4kROJAYgQOJETiQGIEDiTUO3HbH\n9sO27625EIByJnIGXytpqNYiAMprFLjthZKulrS+7joASmp6Bv+CpI9KOnm6A2yvsT1oe/DE08NF\nlgMwOV0Dt/1WSU9GxEPjHRcR6yJiICIGOmf3FVsQwAvX5Ay+QtIq27sl3S3pctt3Vt0KQBFdA4+I\n2yJiYUQskbRa0gMRUf5HxQAUx/fBgcQm9PPgEfFDST+ssgmA4jiDA4kROJAYgQOJETiQGIEDiVW5\nq+pLZg/rPa/bUnzuxkcuKz5Tkvpv2FV85jc2DhSfKUkXzn+iytyfff7fq8xdsfZ9Veaev2F78ZmH\nrl5afKYknRxpdgfUiQ11o8M4gwOJETiQGIEDiRE4kBiBA4kROJAYgQOJETiQGIEDiRE4kBiBA4kR\nOJAYgQOJETiQGIEDiRE4kBiBA4kROJAYgQOJETiQGIEDiVW5q+pvn+3T17dfUnzuP13//eIzJWnT\ngSuLz3zJ9f9bfKYk7bj8oipzV468tsrc/W87UWXuqk8cKD7zgfcuLj5Tkn639KziM32Mu6oC/+8R\nOJAYgQOJETiQGIEDiRE4kFijwG3Ptb3R9i9tD9leXnsxAJPX9PvgX5R0f0T8g+1Zknor7gSgkK6B\n2z5H0kpJ/yhJETEiaaTuWgBKaPIUvV/SQUlfs/2w7fW2+yrvBaCAJoH3SFom6SsRcbGkYUm3Pv8g\n22tsD9oePHFkuPCaAF6IJoHvlbQ3IraMfbxRo8H/iYhYFxEDETHQmcMJHpgKugYeEU9Ietz2q8Ye\nukLSjqpbASii6bvoH5K0Yewd9F2Sbqi3EoBSGgUeEdskDVTeBUBhXMkGJEbgQGIEDiRG4EBiBA4k\nRuBAYo6I4kPP6Tkvlp99TfG5Q59/RfGZkrT8lbuKz/z9qmZ3vZyoDdvurTL3k0+urDL3ot69Veb+\nx62ris+cfc+DxWdK0sjflf8O89affklHDu/t+kXGGRxIjMCBxAgcSIzAgcQIHEiMwIHECBxIjMCB\nxAgcSIzAgcQIHEiMwIHECBxIjMCBxAgcSIzAgcQIHEiMwIHECBxIjMCBxJr+5YMT89czpHXl/wrh\n13zwSPGZknRo99HiM391R50bRC77zs1V5naGO1Xm/su7t3Q/6AU4/On/KT5z/euuKj5Tkvq/Xv7G\nkzOeO97suOK/M4Apg8CBxAgcSIzAgcQIHEiMwIHECBxIrFHgtj9se7vtX9i+y/aZtRcDMHldA7e9\nQNJNkgYi4kJJHUmray8GYPKaPkXvkTTbdo+kXkn7660EoJSugUfEPkmflbRH0gFJhyPie88/zvYa\n24O2B0cOP1t+UwAT1uQp+jxJ10jql/QySX22r3v+cRGxLiIGImJg1jmzy28KYMKaPEW/UtKvI+Jg\nRByTtEnSG+uuBaCEJoHvkXSp7V7blnSFpKG6awEooclr8C2SNkraKumRsf9mXeW9ABTQ6OfBI+J2\nSbdX3gVAYVzJBiRG4EBiBA4kRuBAYgQOJFblrqpHT3S0+7fzi8/tP/RU8ZmStO8bi4vPnDuz0uW6\nc+rMPffa31SZe+HRG6vMXfjASPGZf3XbvuIzJenEm08Unxnvi0bHcQYHEiNwIDECBxIjcCAxAgcS\nI3AgMQIHEiNwIDECBxIjcCAxAgcSI3AgMQIHEiNwIDECBxIjcCAxAgcSI3AgMQIHEiNwIDECBxJz\nRLO7M05oqH1Q0mMNDj1XUp1bpdYxnfadTrtK02vfqbDr4og4r9tBVQJvyvZgRAy0tsAETad9p9Ou\n0vTadzrtylN0IDECBxJrO/B1Lf/+EzWd9p1Ou0rTa99ps2urr8EB1NX2GRxARa0Fbvsq24/a3mn7\n1rb26Mb2Itubbe+wvd322rZ3asJ2x/bDtu9te5fx2J5re6PtX9oesr287Z3GY/vDY18Hv7B9l+0z\n295pPK0Ebrsj6cuS3iJpqaRrbS9tY5cGjku6JSKWSrpU0gen8K6nWitpqO0lGviipPsj4tWSXq8p\nvLPtBZJukjQQERdK6kha3e5W42vrDH6JpJ0RsSsiRiTdLemalnYZV0QciIitY78+otEvwAXtbjU+\n2wslXS1pfdu7jMf2OZJWSvqqJEXESET8vt2tuuqRNNt2j6ReSftb3mdcbQW+QNLjp3y8V1M8Gkmy\nvUTSxZK2tLtJV1+Q9FFJJ9tepIt+SQclfW3s5cR6231tL3U6EbFP0mcl7ZF0QNLhiPheu1uNjzfZ\nGrJ9lqRvSro5Ip5ue5/Tsf1WSU9GxENt79JAj6Rlkr4SERdLGpY0ld+PmafRZ5r9kl4mqc/2de1u\nNb62At8nadEpHy8ce2xKsj1To3FviIhNbe/TxQpJq2zv1uhLn8tt39nuSqe1V9LeiPjjM6KNGg1+\nqrpS0q8j4mBEHJO0SdIbW95pXG0F/qCkC2z3256l0Tcq7mlpl3HZtkZfIw5FxOfa3qebiLgtIhZG\nxBKNfl4fiIgpeZaJiCckPW77VWMPXSFpR4srdbNH0qW2e8e+Lq7QFH5TUBp9ivSii4jjtm+U9F2N\nvhN5R0Rsb2OXBlZIul7SI7a3jT32sYi4r8WdMvmQpA1jf9DvknRDy/ucVkRssb1R0laNfnflYU3x\nq9q4kg1IjDfZgMQIHEiMwIHECBxIjMCBxAgcSIzAgcQIHEjsDxWNvcuQiebTAAAAAElFTkSuQmCC\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x7f6bb45c5748>"
+       "<matplotlib.figure.Figure at 0x7fac595486d8>"
       ]
      },
      "metadata": {},
@@ -52,7 +78,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "%matplotlib inline\n",
-    "\n",
+    "print(np.random.rand(10, 10))\n",
     "plt.imshow(np.random.rand(10, 10), interpolation='none')"
    ]
   },
